--- a/config/swaylock/config
+++ b/config/swaylock/config
@@ -1,19 +1,22 @@
 color=2e3440ff
+image=/home/mehesares/Pictures/wallpapers/nord-arch-frost-logo.png
+scaling=fill
 ignore-empty-password
 show-failed-attempts
-show-keyboard-layout
+hide-keyboard-layout
 bs-hl-color=b48eadff
 caps-lock-bs-hl-color=d08770ff
 caps-lock-key-hl-color=ebcb8bff
 font=Montserrat
+font-size=30
 indicator-radius=100
-indicator-thickness=10
-inside-color=2e3440ff
+indicator-thickness=8
+inside-color=2e344050
 inside-clear-color=81a1c1ff
 inside-ver-color=5e81acff
 inside-wrong-color=bf616aff
 key-hl-color=a3be8cff
-layout-bg-color=2e3440ff
+layout-bg-color=2e344000
 line-uses-ring
 ring-color=3b4252ff
 ring-clear-color=88c0d0ff
